--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,10 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
+[platformio]
+env_default = d1_mini
+src_dir = src
+
 [common]
 framework = arduino
 platform = https://github.com/platformio/platform-espressif8266.git
@@ -28,7 +32,7 @@ lib_deps_external =
 extra_scripts =
   pre:.build_web.py
 build_flags = !python .get_version.py -DMQTT_MAX_PACKET_SIZE=200 -DHTTP_UPLOAD_BUFLEN=128 -Idist -Ilib/DataStructures
-# -D DEBUG_PRINTF
+ -D DEBUG_PRINTF
 # -D MQTT_DEBUG
 # -D MILIGHT_UDP_DEBUG
 # -D STATE_DEBUG
@@ -53,6 +57,7 @@ extra_scripts = ${common.extra_scripts}
 lib_deps =
   ${common.lib_deps_builtin}
   ${common.lib_deps_external}
+upload_port = COM9
 
 [env:esp12]
 platform = ${common.platform}
